2009-11-05  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct some identified TinyXML issues.

	* tinyxml/tinyxml.h (IsWhiteSpace): Add FIXME annotation to flag
	probable redundancy of checks for '\n' and '\r'.
	* tinyxml/tinyxmlparser.cpp: Revert John E's 2008-08-09 change; remove
	all such redundancies in IsWhiteSpace() calls throughout.

	* tinyxml/tinyxml.cpp (TiXmlAttribute::SetDoubleValue): Correct format
	specification in sprintf()/snprintf() calls; "%lf" is invalid; replace
	with "%f".

2009-10-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add CLI loader stub.

	* src/clistub.c: New file.
	* Makefile.in: Add build rule for it; build as...
	(mingw-get.exe): ...this; also add to...
	(clean): ...this goal.

2009-10-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Set up build mechanism.

	* configure.ac, Makefile.in: New files.
	* .cvsignore (configure, autom4te.cache): Add to ignored files.

2009-10-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add GPL-v3 licensing terms.

	* COPYING: New file, sourced from gnu.org.

2009-10-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add pkginfo implementation.

	* src, src/pkginfo: New directories.
	* src/pkginfo/pkginfo.h, src/pkginfo/pkginfo.l: New files.
	* src/pkginfo/driver.c: New file.

2009-10-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Create tdm-branch.

	* All files (tdm-branch): Assign new branch tag.
	* All top-level files: Remove from trunk.
	* ChangeLog: New file.